# opentelemetry-gcp-demo

django_service/: Procfile  pyproject.toml  requirements.txt
django_service/mysite/: asgi.py  settings.py  urls.py  views.py  wsgi.py
fastapi_service/: Makefile  Procfile  README.md  main.py  pyproject.toml  requirements.txt  service.yaml
fastapi_service/collector/: Dockerfile  collector-config.yaml
fastapi_service/mysite/: main.py  tracing.py
