[tool.poetry]
name = "django_service"
version = "0.1.0"
description = ""
authors = ["Lennox Stevenson <lennox@cobrand.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
gunicorn = "^21.2.0"
opentelemetry-instrumentation-aws-lambda = "^0.42b0"
opentelemetry-instrumentation-dbapi = "^0.42b0"
opentelemetry-instrumentation-logging = "^0.42b0"
opentelemetry-instrumentation-sqlite3 = "^0.42b0"
opentelemetry-instrumentation-urllib = "^0.42b0"
opentelemetry-instrumentation-wsgi = "^0.42b0"
opentelemetry-instrumentation-asgi = "^0.42b0"
opentelemetry-instrumentation-fastapi = "^0.42b0"
opentelemetry-instrumentation-httpx = "^0.42b0"
opentelemetry-instrumentation-jinja2 = "^0.42b0"
opentelemetry-instrumentation-requests = "^0.42b0"
opentelemetry-instrumentation-tortoiseorm = "^0.42b0"
opentelemetry-instrumentation-urllib3 = "^0.42b0"
uvicorn = "^0.24.0.post1"
opentelemetry-instrumentation-django = "^0.42b0"
requests = "^2.31.0"
opentelemetry-sdk = "^1.21.0"
opentelemetry-api = "^1.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
